SDK_REGISTRY_TOKEN + MAPBOX_DOWNLOADS_TOKEN

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,8 @@ buildscript {
 }
 
 rootProject.allprojects {
-    def token = System.getenv('SDK_REGISTRY_TOKEN')
+    def token = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: System.getenv('MAPBOX_DOWNLOADS_TOKEN')
+            ?: project.properties['SDK_REGISTRY_TOKEN'] ?: System.getenv('SDK_REGISTRY_TOKEN')
     if (token == null || token.empty) {
         throw new Exception("SDK Registry token is null. See README.md for more information.")
     }
